# rover_astra

./: README.txt
src/roverArm/arm_moveit_config/: .setup_assistant  package.xml
src/roverArm/arm_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ros2_controllers.yaml  rover_arm.ros2_control.xacro  rover_arm.srdf  rover_arm.urdf.xacro
src/roverArm/arm_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/roverArm/pymoveit2/: arm_mover.py
src/roverArm/pymoveit2/examples/: ex_pose_goal.py
src/roverArm/pymoveit2/pymoveit2/robots/: rover_arm.py
src/roverArm/rover_arm/: CMakeLists.txt  package.xml
src/roverArm/rover_arm/config/: joint_names_rover_arm.yaml
src/roverArm/rover_arm/meshes/: base_link.STL  ee_link.STL  elbow_link.STL  shoulder_link.STL  upperarm_link.STL  wrist1_link.STL  wrist2_link.STL
src/roverArm/rover_arm/urdf/: rover_arm.csv  rover_arm.urdf
src/roverArm/scripts/: joint_publisher.py  key.py  key_clicker.py  key_data.py  pose_goal.py  way_point.py
src/roverArm/scripts/__pycache__/: test_detector.py
