<package format="3">
  <name>rover_arm</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for robotic_arm</p>
    <p>This package contains configuration data, 3D models, and launch files
    for the robotic_arm robot.</p>
  </description>

  <maintainer email="TODO@email.com">TODO</maintainer>
  <license>BSD</license>

  <!-- Build tool dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dependencies -->
  <depend>robot_state_publisher</depend>
  <depend>rviz2</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_ros_pkgs</depend>
  <depend>xacro</depend>

  <!-- Export -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

